2011-09-05  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/objects_collections.py (VLCollection): lastUpdate field added

	* models/collection.ome.xml: added lastUpdate property to VLCollection model (and to all children classes by inheritance). This field has to be used to track all the changes.

2011-08-15    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/ehr.py (EHR.__init__): Now we can handle
	multiple records for the same archetype for the same individual.

2011-08-12    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py (Recorder.process_chunk):
	added an hack to deal with data reloads. It is really a quick hack.



	* bl/vl/kb/drivers/omero/data_samples.py
	(IlluminaBeadChipAssayType): Missing HUMAN1M_DUO constant.

2011-08-11    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/objects_collections.py (ContainerStatus):
	updated to new enum.

	* models/collection.ome.xml: added 'USED' to ContainerStatus.

	* bl/vl/kb/drivers/omero/data_samples.py
	(IlluminaBeadChipAssayType): updated to new enum.

	* models/data_sample.ome.xml: changed IlluminaBeadChipAssayType to
	more reasonable string values.

	* tests/bl/vl/kb/test_enums.py: added.

	* bl/vl/app/importer/titer_plate.py (Recorder.process_chunk): oops
	in the handling of barcodes.

	* tools/build_dependency.py (dump_dna_samples): bug fix. it was
	using a sample_label == label, which is not very useful.

2011-08-10    <zag@manzanillo>

	* bl/vl/app/importer/device.py (Recorder.do_consistency_checks):
	bug fix. It was rejecting devices with no barcode (it is legal,
	after all)

	* tools/build_dependency.py: another quick and dirty importer for
	Ilenia style csv. This one should be less lenient on ambiguos
	records. It makes extract_individuals.py and extract_samples.py
	obsolete.

2011-08-09    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.SNP_SET_COLS): Removed the field 'label'. This
	field, the label of the marker in the specific technological