@@ -41,6 +41,7 @@ as well the actual amount of fluid available.
       <required name="content" type="ome.model.vl.VesselContent"/>
       <required name="status" type="ome.model.vl.VesselStatus"/>
       <required name="action" type="ome.model.vl.Action"/>
+      <optional name="lastUpdate" type="ome.model.vl.Action"/>
     </properties>
   </type>
 
